--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel:+12026998935" class="contact-link">+1 (213) 352-2795</a>
+              <a href="tel:+12026998935" class="contact-link">+1 (202) 6998935</a>
             </div>
 
           </li>
