--- a/index.html
+++ b/index.html
@@ -487,9 +487,9 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <h4 class="h4 timeline-item-title">Howard university</h4>
 
-              <span>2007 — 2008</span>
+              <span>Aug 2022 — Mar 2026</span>
 
               <p class="timeline-text">
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
