--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
               <span>Aug 2022 — Mar 2026</span>
 
               <p class="timeline-text">
+                <i>Bachelor,Computer Science</i>
                 Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
                 quas molestias
                 exceptur.
