--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 <i><b>Bachelor,Computer Science</br></i><br>
                 <ul>
                   <li>Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
-                  <li>Coursework: Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
+                  <li>Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
                 </ul>
               </p>
 
