--- a/index.html
+++ b/index.html
@@ -493,9 +493,9 @@
 
               <p class="timeline-text">
                 <i><b>Bachelor,Computer Science</br></i><br>
-                <ul>
-                  <li>Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
-                  <li>Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
+                <ul class="uniskill">
+                  <li> • Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
+                  <li> • Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
                 </ul>
               </p>
 
