--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Amar Bahadur KC</h1>
 
-          <p class="title">Web developer</p>
+          <p class="title">Bachelor in Computer science</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
