--- a/index.html
+++ b/index.html
@@ -503,13 +503,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Trinity International college</h4>
 
-              <span>2006 — 2007</span>
+              <span>June 2018 — Aug 2020</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                High School, A-Levels
               </p>
 
             </li>
