--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
               <span>Aug 2022 — Mar 2026</span>
 
               <p class="timeline-text">
-                <i><b>Bachelor, Computer Science</br></i><br>
+                <i><b>Bachelor, Computer Science</b></i><br>
                 <ul class="uniskill">
                   <li> • Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
                   <li> • Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
@@ -508,7 +508,11 @@
               <span>June 2018 — Aug 2020</span>
 
               <p class="timeline-text">
-                High School, A-Levels
+                <i><b> High School, A-Levels</b</i><br>
+                 <ul class="uniskill">
+                  <li> • Coursework: Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.
+                  <li> • GPA:4.0.
+                </ul>
               </p>
 
             </li>
