--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
               <p class="timeline-text">
                 <i><b> High School, A-Levels</b</i><br>
                  <ul class="uniskill">
-                  <li> • Coursework: Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.
-                  <li> • GPA:4.0.
+                  <li> • Coursework: Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
+                  <li> • GPA:4.0.</li>
                 </ul>
               </p>
 
