--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
               <p class="timeline-text">
                 <i><b> High School, A-Levels</b</i><br>
-                 <ul class="collegeskill">
+                 <ul class="uniskill">
                   <li> • Coursework: Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
                   <li> • GPA:4.0.</li>
                 </ul>
