--- a/index.html
+++ b/index.html
@@ -508,10 +508,10 @@
               <span>June 2018 — Aug 2020</span>
 
               <p class="timeline-text">
-                <i><b> High School, A-Levels</b</i><br>
+                <i><b>Bachelor, Computer Science</b></i><br>
                 <ul class="uniskill">
-                  <li> • Coursework: Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
-                  <li> • GPA:4.0.</li>
+                  <li> • Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
+                  <li> • Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
                 </ul>
               </p>
 
