--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
               <p class="timeline-text">
                 <i><b>Bachelor, Computer Science</b></i><br>
                 <ul class="uniskill">
-                  <li> • Technical Skills: - Java, Python, MySQL, Django, FAST API, LaTeX.</li>
-                  <li> • Coursework: - Intro to Computer Science, Exploring Computer Science, Discrete Mathematics, English 02, Principle Economics 02.</li>
+                  <li> • Coursework: - Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
+                  <li> • GPA:4.0. </li>
                 </ul>
               </p>
 
