--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                 <i><b>Bachelor, Computer Science</b></i><br>
                 <ul class="uniskill">
                   <li> • Coursework: - Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
-                  <li> • GPA:4.0. </li>
+                  <li> • GPA:- 4.0. </li>
                 </ul>
               </p>
 
@@ -535,14 +535,16 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Engineering and Technology Intern</h4>
 
-              <span>2015 — Present</span>
+              <span>Nov 2021 — Mar 2022</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                <i><b>RAN(Robotics Association of Nepal)</b></i><br>
+                <ul class="uniskill">
+                  <li> • Got the hands on experience of prototyping and designing the robust software for any company.</li>
+                  <li> • Collaborated with fellow interns; wrote and implemented efficient and reusable modular codes in Java and Python.</li>
+                </ul>
               </p>
 
             </li>
