--- a/index.html
+++ b/index.html
@@ -551,14 +551,16 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Tutor</h4>
 
-              <span>2013 — 2015</span>
+              <span>Dec 2020 — Jun 2021</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                <i><b>Trinity International College</b></i><br>
+                <ul class="uniskill">
+                  <li> • Taught various classes to juniors of A-level ranging from Mathematics to Physics and proctored more than 80 plus of exams over the period of tutoring.</li>
+                  <li> • Assigned assisted projects to students where the productivity of the learning curve rises to over 90 percent.</li>
+                </ul>
               </p>
 
             </li>
