--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
               <span>June 2018 — Aug 2020</span>
 
               <p class="timeline-text">
-                <i><b>Bachelor, Computer Science</b></i><br>
+                <i><b>High School, A-Levels</b></i><br>
                 <ul class="uniskill">
                   <li> • Coursework: - Physics, Chemistry, Mathematics, Further Mathematics, English General Paper.</li>
                   <li> • GPA:- 4.0. </li>
@@ -558,7 +558,7 @@
               <p class="timeline-text">
                 <i><b>Trinity International College</b></i><br>
                 <ul class="uniskill">
-                  <li> • Taught various classes to juniors of A-level ranging from Mathematics to Physics and proctored more than 80 plus of exams over the period of tutoring.</li>
+                  <li> • Taught various classes to juniors of A-level ranging from Mathematics to Physics and proctored more than 20 plus of exams over the period of tutoring.</li>
                   <li> • Assigned assisted projects to students where the productivity of the learning curve rises to over 90 percent.</li>
                 </ul>
               </p>
@@ -567,14 +567,17 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">Youth Tech Revolution Volunteer</h4>
 
-              <span>2010 — 2013</span>
+              <span>Nov 2018 — Feb 2020</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                <i><b>Trinity International College</b></i><br>
+                <ul class="uniskill">
+                  <li> • Organized more than 7 events based on STEM to build the strong school community of tech enthusiasts.</li>
+                  <li> • Collaborated with other schools to create a space for developer student clubs and managed funding from metropolitan of Kath-
+                       mandu to run them.</li>
+                </ul>
               </p>
 
             </li>
