--- a/index.html
+++ b/index.html
@@ -518,6 +518,52 @@
             </li>
 
           </ol>
+        </section>
+       <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Projects</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Real time currency converter</h4>
+
+              <span>Oct 2022 — Present</span>
+
+              <p class="timeline-text">
+                <i><b>Java, Forex API, Selenium, Python, Postman API</b></i><br>
+                <ul class="uniskill">
+                  <li> • Building a currency converter which provides web-based interface with the use of Forex API to exchange different currencies in
+                       real time.</li>
+                </ul>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Physics P1 Android App</h4>
+
+              <span>Apr 2021 — Aug 2021</span>
+
+              <p class="timeline-text">
+                <i><b>Java, Android Studio</b></i><br>
+                <ul class="uniskill">
+                  <li> • Built learning based android mobile application with a clean user interface to learn by having syllabus side by side and fetched the
+                      data from GitHub by hosting it into the GitHub.</li>
+                </ul>
+              </p>
+
+            </li>
+
+          </ol>
 
         </section>
 
