--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
 
         </section>
 
+
         <section class="skill">
 
           <h3 class="h3 skills-title">My skills</h3>
@@ -693,6 +694,59 @@
           </ul>
 
         </section>
+        
+        <section class="skill">
+
+          <h3 class="h3 skills-title">Awards and Honors</h3>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">National Maths League 2020 - Nepal</h5>
+                <data>70%</data>
+              </div>
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Howard Achievers Scholarship Awardee</h5>
+                <data>50%</data>
+              </div>
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">HTML and CSS</h5>
+                <data value="90">90%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
+
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Android Studio</h5>
+                <data value="40">40%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 40%;"></div>
+              </div>
+
+            </li>
+
+          </ul>
+
+        </section>
+
 
       </article>
 
