--- a/index.html
+++ b/index.html
@@ -704,8 +704,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">National Maths League 2020 - Nepal</h5>
-                <data>70%</data>
+                <h5 class="h5">National Maths League 2020 - Nepal</h5></br>
+                <data>It was a National level high school competition organized by Budhanilkantha High School</data>
               </div>
             </li>
 
@@ -713,36 +713,9 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Howard Achievers Scholarship Awardee</h5>
-                <data>50%</data>
+                <data>Awarded with HU achievers acholarship. It covers 60 % Tution Fee for my undergraduate degree at Howard. </data>
               </div>
             </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">HTML and CSS</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Android Studio</h5>
-                <data value="40">40%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 40%;"></div>
-              </div>
-
-            </li>
-
           </ul>
 
         </section>
