--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Howard Achievers Scholarship Awardee</h5>
+                <h5 class="h5">Howard Achievers Scholarship Awardee</h5></br>
                 <data>Awarded with HU achievers acholarship. It covers 60 % Tution Fee for my undergraduate degree at Howard. </data>
               </div>
             </li>
