--- a/index.html
+++ b/index.html
@@ -631,7 +631,31 @@
           </ol>
 
         </section>
+        
+        <section class="skill">
 
+          <h3 class="h3 skills-title">Awards and Honors</h3>
+
+          <ul class="skills-list content-card">
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">National Maths League 2020 - Nepal</h5></br>
+                <data>It was a National level high school maths competition organized by Budhanilkantha High School</data>
+              </div>
+            </li>
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Howard Achievers Scholarship Awardee</h5></br>
+                <data>Awarded with HU achievers scholarship. It covers 60 % of tution Fee for my undergraduate degree at Howard. </data>
+              </div>
+            </li>
+          </ul>
+
+        </section>
 
         <section class="skill">
 
@@ -694,33 +718,6 @@
           </ul>
 
         </section>
-        
-        <section class="skill">
-
-          <h3 class="h3 skills-title">Awards and Honors</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">National Maths League 2020 - Nepal</h5></br>
-                <data>It was a National level high school competition organized by Budhanilkantha High School</data>
-              </div>
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Howard Achievers Scholarship Awardee</h5></br>
-                <data>Awarded with HU achievers acholarship. It covers 60 % Tution Fee for my undergraduate degree at Howard. </data>
-              </div>
-            </li>
-          </ul>
-
-        </section>
-
-
       </article>
 
 
