--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">National Maths League 2020 - Nepal</h5></br>
+                <h5 class="h5">National Maths League 2020 - Nepal</h5>
                 <data>It was a National level high school maths competition organized by Budhanilkantha High School</data>
               </div>
             </li>
