--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+      <article class="portfolio" data-page="Writing">
 
         <header>
           <h2 class="h2 article-title">Writing</h2>
