--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="resu">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
