--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Re</button>
+            <button class="navbar-link" data-nav-link>R</button>
           </li>
 
           <li class="navbar-item">
@@ -467,7 +467,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="R">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -728,7 +728,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="Writing">
+      <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Writing</h2>
