--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Writing</button>
+            <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
           <li class="navbar-item">
@@ -467,7 +467,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="R">
+      <article class="resume" data-page="r">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
