--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="Projects">
+      <article class="blog" data-page="projects">
 
         <header>
           <h2 class="h2 article-title">Projects</h2>
