--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>R</button>
+            <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
           <li class="navbar-item">
@@ -467,7 +467,7 @@
         - #RESUME
       -->
 
-      <article class="resume" data-page="r">
+      <article class="resume" data-page="resume">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
