--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Howard Achievers Scholarship Awardee</h5></br>
-                <data>Awarded with HU achievers scholarship. It covers 60 % of tution Fee for my undergraduate degree at Howard. </data>
+                <data>Awarded with HU achievers scholarship. It covers 60 % of tution fee for my undergraduate degree at Howard. </data>
               </div>
             </li>
           </ul>
