--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="mailto:amar.kc@bison.howard.edu" class="form" data-form>
+          <form action="mailto:amar.kc@bison.howard.edu" enctype="text/plain" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
