--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.reuters.com/markets/companies/DVN.N/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
