--- a/index.html
+++ b/index.html
@@ -795,9 +795,9 @@
                   <img src="./assets/images/menifesto.jpeg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Engligh-102 MP</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Manifesto</p>
 
               </a>
             </li>
