--- a/index.html
+++ b/index.html
@@ -795,9 +795,9 @@
                   <img src="./assets/images/menifesto.jpeg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Engligh-102 MP</h3>
+                <h3 class="project-title">Manifesto</h3>
 
-                <p class="project-category">Manifesto</p>
+                <p class="project-category">Engligh-102 MP</p>
 
               </a>
             </li>
@@ -810,12 +810,12 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/school.jpeg" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Testimonial</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">English-102 MP</p>
 
               </a>
             </li>
