--- a/index.html
+++ b/index.html
@@ -831,9 +831,9 @@
                   <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Explainer</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">English-102 MP</p>
 
               </a>
             </li>
