--- a/index.html
+++ b/index.html
@@ -739,9 +739,9 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>All</button>
+              <button class="active" data-filter-btn>English-102 MP</button>
             </li>
-
+<!--
             <li class="filter-item">
               <button data-filter-btn>English-102 MP</button>
             </li>
@@ -749,7 +749,7 @@
             <li class="filter-item">
               <button data-filter-btn>Personal Writing</button>
             </li>
-
+-->
           </ul>
 
           <div class="filter-select-box">
@@ -834,24 +834,6 @@
                 <h3 class="project-title">Explainer</h3>
 
                 <p class="project-category">English-102 MP</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Common app essay</h3>
-
-                <p class="project-category">Personal essay</p>
 
               </a>
             </li>
