--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/explaner.jpeg" alt="fundo" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Explainer</h3>
