--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                 <div class="blog-content">
 
                   <div class="blog-meta">
-                    <p class="blog-category">Design</p>
+                    <p class="blog-category">Status</p>
 
                     <span class="dot"></span>
 
@@ -899,7 +899,7 @@
                 <div class="blog-content">
 
                   <div class="blog-meta">
-                    <p class="blog-category">Design</p>
+                    <p class="blog-category">Status</p>
 
                     <span class="dot"></span>
 
