--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-1.jpg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="./assets/images/project1.jpeg" alt="Design conferences in 2022" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
