--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-2.jpg" alt="Best fonts every designer" loading="lazy">
+                  <img src="./assets/images/project2.jpeg" alt="Best fonts every designer" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
