--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I'm Amar Bahadur KC from Baglung, Nepal, currently doing my undergraduate at Howard University.
+            I'm Amar Bahadur KC from Baglung, Nepal, currently doing my undergraduate majoring in computer science at Howard University.
           </p>
 
           <p>
