--- a/index.html
+++ b/index.html
@@ -209,12 +209,11 @@
 
         <section class="about-text">
           <p>
-            I'm Amar Bahadur KC from Baglung, Nepal, currently doing my undergraduate majoring in computer science at Howard University.
+            Hello! I'm Amar Bahadur KC from Baglung, Nepal, currently doing my undergraduate majoring in computer science at Howard University.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
+            My current area of intrest is software development mainly including Android developmet and Website development.
             add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
             across your
             message and identity in the most creative way. I created web design for many famous brand companies.
