--- a/index.html
+++ b/index.html
@@ -213,10 +213,8 @@
           </p>
 
           <p>
-            My current area of intrest is software development mainly including Android developmet and Website development.
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            My current area of interest is software development, particularly Android and website development.
+            In this field, I am more patient, persistent, committed, and unyieldingly determined. I am skilled at coding, debugging, and problem-solving.
           </p>
         </section>
 
