--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            Hello! I'm Amar Bahadur KC from Baglung, Nepal, currently doing my undergraduate majoring in computer science at Howard University.
+           Hello! I'm Amar Bahadur KC from Baglung, Nepal, and I'm currently pursuing a computer science major at Howard University
           </p>
 
           <p>
