--- a/index.html
+++ b/index.html
@@ -871,7 +871,8 @@
                   <h3 class="h3 blog-item-title">Real Time Currency Converter</h3>
 
                   <p class="blog-text">
-                    Sed ut perspiciatis, nam libero tempore, cum soluta nobis est eligendi.
+                    I Built a learning based android mobile application with a clean user interface to help a high school physics students.
+                    It has a features like taking quizes, viewing solution, along with notes and syllabus.
                   </p>
 
                 </div>
