--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites using react native.
+                  High-quality web development of sites using react native.
                 </p>
               </div>
 
