--- a/index.html
+++ b/index.html
@@ -843,7 +843,8 @@
                   <h3 class="h3 blog-item-title">Android application in 2021</h3>
 
                   <p class="blog-text">
-                    Veritatis et quasi architecto beatae vitae dicta sunt, explicabo.
+                    I Built a learning based android mobile application with a clean user interface to help a high school physics students.
+                    It has a features like taking quizes, viewing solution, along with notes and syllabus.
                   </p>
 
                 </div>
@@ -871,8 +872,7 @@
                   <h3 class="h3 blog-item-title">Real Time Currency Converter</h3>
 
                   <p class="blog-text">
-                    I Built a learning based android mobile application with a clean user interface to help a high school physics students.
-                    It has a features like taking quizes, viewing solution, along with notes and syllabus.
+                    I am currently working on the development of currency converter project. Is is a both web and mobile app based project.
                   </p>
 
                 </div>
