--- a/index.html
+++ b/index.html
@@ -283,15 +283,14 @@
                   <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Anil kc</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    He and I collaborated on an Android app project. 
+                    That project met my expectations in every way. 
+                    He has a great deal of knowledge in this area and is very focused and concerned with the tasks at hand. 
+                    Working with him gave me a ton of fresh perspectives and fantastic experiences.
                   </p>
                 </div>
 
