--- a/index.html
+++ b/index.html
@@ -304,21 +304,20 @@
                   <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Hari Paudel</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    He and I collaborated on an Android app project. 
+                    That project met my expectations in every way. 
+                    He has a great deal of knowledge in this area and is very focused and concerned with the tasks at hand. 
+                    Working with him gave me a ton of fresh perspectives and fantastic experiences.
                   </p>
                 </div>
 
               </div>
             </li>
-
+<!--
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
@@ -362,7 +361,7 @@
 
               </div>
             </li>
-
+-->
           </ul>
 
         </section>
