--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/anil.jpg" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/anil.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Anil kc</h4>
