--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="#">
+              <a href="https://play.google.com/store/apps/details?id=com.physicsp1.copy" target="_blank">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/project1.jpeg" alt="Design conferences in 2022" loading="lazy">
