--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    I have worked with him since our first meeting. Currently, we are working on our common project. 
+                    I have been working with him since our first meeting. Currently, we are working on our common project. 
                     I found him to be one of the brightest, friendliest, and hardest-working people I have ever worked with. 
                     Every day, he comes up with new ideas on how to improve the project.
                   </p>
