--- a/index.html
+++ b/index.html
@@ -209,13 +209,13 @@
 
         <section class="about-text">
           <p>
-           Hello! I'm Amar Bahadur KC from Baglung, Nepal, and I'm currently pursuing a computer science major at Howard University
+           Hello! I'm Amar Bahadur KC from Baglung, Nepal, and I'm currently pursuing a computer science major at Howard University.
           </p>
 
           <p>
             My current area of interest is software development, particularly Android and website development.
             In this field, I am more patient, persistent, committed, and unyieldingly determined. I am skilled at coding, debugging, and problem-solving.
-            These days, I'm taking flutter courses in addition to my coursework.
+            These days, I'm taking Flutter courses in addition to my coursework.
             I'm hoping that this can improve my abilities in the area of cross-platform app development.
           </p>
         </section>
