--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                   <img src="./assets/images/coverletter.jpeg" alt="fundo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Cover Letter</h3>
+                <h3 class="project-title">MP 1 Cover Letter</h3>
 
                 <p class="project-category">English-102 MP</p>
 
